sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardUserSetting__c/fields/SmartViscaf__SvcDoubleSide__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__SvcDoubleSide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SmartViscaカメラ:裏面も撮る</label>
    <type>Checkbox</type>
</CustomField>