sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardUserSetting__c/fields/SmartViscaf__SvcFreehandMemo__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__SvcFreehandMemo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SmartViscaカメラ:手書きメモをデジタル化する（表面のみ）</label>
    <type>Checkbox</type>
</CustomField>