sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardUserSetting__c/fields/SmartViscaf__SvcGeoLocation__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__SvcGeoLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SmartViscaカメラ:位置情報を送信履歴に残す(廃止)</label>
    <type>Checkbox</type>
</CustomField>