sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardUserSetting__c/fields/SmartViscaf__SvcImageTransform__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__SvcImageTransform__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SmartViscaカメラ:画像補正する</label>
    <type>Checkbox</type>
</CustomField>