sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardUserSetting__c/fields/SmartViscaf__SvcLastListName__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__SvcLastListName__c</fullName>
    <label>SmartViscaカメラ:前回のリスト名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>