sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardUserSetting__c/fields/SmartViscaf__SvcRepeatMemo__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__SvcRepeatMemo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SmartViscaカメラ:メモを引き継ぐ</label>
    <type>Checkbox</type>
</CustomField>